<resources>
    <string name="app_name">My Application</string>
    <string name="girisYap">Giriş Yap</string>
    <string name="email">Email</string>
    <string name="sifre">Şifre</string>
    <string name="kayıt_ol">Kayıt Ol</string>
    <string name="giris_yapmak_icin_tikla">Giriş Yapmak İçin Tıkla</string>
    <string name="kayit_olmak_icin_tikla">Kayıt Olmak İçin Tıkla</string>
    <string name="cikisYap">Çıkış Yap</string>
    <string name="randevu_al">RANDEVU AL</string>
    <string name="alanlar">Alanlar</string>
    <string name="randevularim">RANDEVULARIM</string>
    <string name="ad">Ad</string>
    <string name="soyad">Soyad</string>
    <string name="tc_kimlik_no">TC Kimlik No</string>
    <string name="randevu_olustur">Randevu Oluştur</string>
    <string name="telefon">Telefon</string>
    <string name="sehir_secimi">Şehir Seçiniz</string>
    <string name="hastane_secim">Hastane Seçiniz</string>
    <string name="randevu_ara">RANDEVU ARA</string>
    <string name="gun_secim">Gün</string>
    <string name="saat_secim">Saat</string>
    <string name="randevu_sil">RANDEVUYU SİL</string>
    <string name="hekimler">HEKİMLER</string>
    <string name="tarih">Tarih</string>
    <string name="alan_secim">Alan</string>
    <string name="randevu_goster">Randevumu Göster</string>
    <string name="sifremi_unuttum">Şifremi Unuttum</string>
    <string name="hastane">Hastane</string>


    <string-array name="sehirler">
        <item>Adana</item>
        <item>Adıyaman</item>
        <item>Afyon</item>
        <item>Aksaray</item>
        <item>Amasya</item>
        <item>Ankara</item>
        <item>Antalya</item>
        <item>Artvin</item>
        <item>Aydın</item>
        <item>Balıkesir</item>
        <item>Bilecik</item>
        <item>Bingöl</item>
        <item>Bitlis</item>
        <item>Bolu</item>
        <item>Burdur</item>
        <item>Bursa</item>
        <item>Çanakkale</item>
        <item>Çorum</item>
        <item>Denizli</item>
        <item>Diyarbakır</item>
        <item>Edirne</item>
        <item>Elazığ</item>
        <item>Erzincan</item>
        <item>Erzurum</item>
        <item>Eskişehir</item>
        <item>Gaziantep</item>
        <item>Giresun</item>
        <item>Gümüşhane</item>
        <item>Hakkari</item>
        <item>Hatay</item>
        <item>Isparta</item>
        <item>İçel</item>
        <item>İstanbul</item>
        <item>İzmir</item>
        <item>Kars</item>
        <item>Kastamonu</item>
        <item>Kayseri</item>
        <item>Kırklareli</item>
        <item>Kırşehir</item>
        <item>Kocaeli</item>
        <item>Konya</item>
        <item>Kütahya</item>
        <item>Malatya</item>
        <item>Manisa</item>
        <item>Kahramanmaraş</item>
        <item>Mardin</item>
        <item>Muğla</item>
        <item>Muş</item>
        <item>Nevşehir</item>
        <item>Niğde</item>
        <item>Ordu</item>
        <item>Rize</item>
        <item>Sakarya</item>
        <item>Samsun</item>
        <item>Siirt</item>
        <item>Sinop</item>
        <item>Sivas</item>
        <item>Tekirdağ</item>
        <item>Tokat</item>
        <item>Trabzon</item>
        <item>Tunceli</item>
        <item>Şanlıurfa</item>
        <item>Uşak</item>
        <item>Van</item>
        <item>Yozgat</item>
        <item>Zonguldak</item>
        <item>Aksaray</item>
        <item>Bayburt</item>
        <item>Karaman</item>
        <item>Kırıkkale</item>
        <item>Batman</item>
        <item>Şırnak</item>
        <item>Bartın</item>
        <item>Ardahan</item>
        <item>Iğdır</item>
        <item>Yalova</item>
        <item>Karabük</item>
        <item>Kilis</item>
        <item>Osmaniye</item>
        <item>Düzce</item>
    </string-array>

    <string-array name="gunler">
        <item>Pazartesi</item>
        <item>Salı</item>
        <item>Çarşamba</item>
        <item>Perşembe</item>
        <item>Cuma</item>
        <item>Cumartesi</item>
        <item>Pazar</item>
    </string-array>

    <string-array name="saatler">
        <item>08:00</item>
        <item>08:15</item>
        <item>08:30</item>
        <item>08:45</item>
        <item>09:00</item>
        <item>09:15</item>
        <item>09:30</item>
        <item>09:45</item>
        <item>10:00</item>
        <item>10:15</item>
        <item>10:30</item>
        <item>10:45</item>
        <item>11:00</item>
        <item>11:15</item>
        <item>11:30</item>
        <item>11:45</item>
        <item>12:00</item>
        <item>12:15</item>
        <item>12:30</item>
        <item>12:45</item>
        <item>13:00</item>
        <item>13:15</item>
        <item>13:30</item>
        <item>13:45</item>
        <item>14:00</item>
        <item>14:15</item>
        <item>14:30</item>
        <item>14:45</item>
        <item>15:00</item>
        <item>15:15</item>
        <item>15:30</item>
        <item>15:45</item>
        <item>16:00</item>
        <item>16:15</item>
        <item>16:30</item>
        <item>16:45</item>
        <item>17:00</item>
    </string-array>

    <string-array name="alanlar">
        <item>Aile Hekimliği</item>
        <item>Anesteziyoloji ve Reanimasyon</item>
        <item>Askeri Sağlık Hizmetleri</item>
        <item>Beyin ve Sinir Cerrahisi</item>
        <item>Çocuk Cerrahisi</item>
        <item>Deri ve Zührevi Hastalıkları</item>
        <item>Enfeksiyon Hastalıkları ve Klinik Mikrobiyoloji</item>
        <item>Çocuk ve Ergen Ruh Sağlığı ve Hastalıkları</item>
        <item>Fiziksel Tıp ve Rehabilitasyon</item>
        <item>Çocuk Sağlığı ve Hastalıkları</item>
        <item>Genel Cerrahi</item>
        <item>Fizyoloji</item>
        <item>Göğüs Cerrahisi</item>
        <item>Göğüs Hastalıkları</item>
        <item>Göz Hastalıkları</item>
        <item>Halk Sağlığı</item>
        <item>Hava ve Uzay Hekimliği</item>
        <item>Histoloji ve Embriyoloji</item>
        <item>İç Hastalıkları</item>
        <item>Kadın Hastalıkları ve Doğum</item>
        <item>Kalp ve Damar Cerrahisi</item>
        <item>Kardiyoloji</item>
        <item>Kulak Burun Boğaz Hastalıkları</item>
        <item>Nöroloji</item>
        <item>Nükleer Tıp</item>
        <item>Ortopedi ve Travmatoloji</item>
        <item>Plastik, Rekonstrüktif ve Estetik Cerrahi</item>
        <item>Radyasyon Onkolojisi</item>
        <item>Radyoloji</item>
        <item>Spor Hekimliği</item>
        <item>Ruh Sağlığı ve Hastalıkları</item>
        <item>Sualtı Hekimliği ve Hiperbarik Tıp</item>
        <item>Tıbbi Biyokimya</item>
        <item>Tıbbi Ekoloji ve Hidroklimatoloji</item>
        <item>Tıbbi Farmakoloji</item>
        <item>Tıbbi Genetik</item>
        <item>Tıbbi Mikrobiyoloji</item>
        <item>Tıbbi Patoloji</item>
        <item>Üroloji</item>
    </string-array>

    <string-array name="hastaneler">hastaneler</string-array>


</resources>