<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Admin">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/takvim"
        android:layout_marginBottom="10dp"/>


    <EditText
        android:id="@+id/tcKimlikNo"
        android:hint="@string/tc_kimlik_no"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        android:background="@drawable/border"
        android:drawableEnd="@drawable/baseline_verified_user_24" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/randevu_ara"
        android:id="@+id/randevuAraBtn"
        android:background="@drawable/border"
        android:backgroundTint="@color/design_default_color_secondary" />


    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/ad"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/dbAd"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/soyad"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/dbSoyad"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/alan_secim"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/dbAlan"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/hastane_secim"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/dbHastane"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/tarih"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/dbTarih"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/saat_secim"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/dbSaat"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/randevu_sil"
        android:id="@+id/randevuSilBtn"
        android:textColor="@color/white"
        android:background="@drawable/border"
        android:backgroundTint="@android:color/holo_red_light" />

</LinearLayout>