<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Randevularim">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/takvim"
        android:layout_marginBottom="10dp"/>


    <androidx.cardview.widget.CardView
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="4dp"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingHorizontal="5dp"
            android:textColor="@color/black"
            android:text="@string/ad"/>

        <TextView
            android:id="@+id/dbAd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:paddingRight="5dp"
            android:textSize="20dp"/>


        <TextView
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingHorizontal="5dp"
            android:textColor="@color/black"
            android:layout_marginTop="50dp"
            android:text="@string/soyad"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:textSize="20dp"
            android:paddingRight="5dp"
            android:layout_marginTop="50dp"
            android:id="@+id/dbSoyad"/>

        <TextView
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/alan_secim"
            android:paddingHorizontal="5dp"
            android:layout_marginTop="100dp"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:textSize="20dp"
            android:paddingRight="5dp"
            android:layout_marginTop="100dp"
            android:id="@+id/dbAlan"/>

        <TextView
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:paddingHorizontal="5dp"
            android:layout_marginTop="150dp"
            android:text="@string/hastane"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:textSize="20dp"
            android:paddingRight="5dp"
            android:layout_marginTop="150dp"
            android:id="@+id/dbHastane"/>

        <TextView
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:paddingHorizontal="5dp"
            android:layout_marginTop="220dp"
            android:text="@string/tarih"
            android:textSize="20dp"
            android:textColor="@color/black"

            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:textSize="20dp"
            android:paddingRight="5dp"
            android:layout_marginTop="220dp"
            android:id="@+id/dbTarih"/>


        <TextView
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:paddingHorizontal="5dp"
            android:text="@string/saat_secim"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="270dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginLeft="100dp"
            android:paddingRight="5dp"
            android:layout_marginTop="270dp"
            android:id="@+id/dbSaat"/>


    </androidx.cardview.widget.CardView>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:paddingHorizontal="100dp"
        android:onClick="deleteData"
        android:background="@drawable/border"
        android:backgroundTint="@android:color/holo_red_light"
        android:drawableLeft="@drawable/baseline_delete_24"
        android:text="@string/randevu_sil"
        android:textColor="@color/white" />

</LinearLayout>