<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center"
    tools:context=".Login">

    <ImageView
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginTop="-70dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/login" />



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:paddingHorizontal="5dp"
        android:layout_marginBottom="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:paddingHorizontal="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/sifre"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:drawableEnd="@drawable/ic_password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/girisYap"
        android:textSize="15dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textColor="@color/white" />

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@id/registerNow"
        android:text="@string/kayit_olmak_icin_tikla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>