<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center"
    tools:context=".Register">

    <ImageView
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginTop="-70dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/register"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/border"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        android:paddingHorizontal="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/sifre"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:paddingHorizontal="5dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        android:layout_marginTop="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeatPassword"
            android:hint="@string/sifre"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/kayıt_ol"
        android:textSize="15dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/material_dynamic_primary60"
        android:textColor="@color/white" />
    
    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@id/loginNow"
        android:text="@string/giris_yapmak_icin_tikla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>